# university_staff

./: README.md
1 курс/курсач/: Ball Blast.pptx  titulnik.docx  блочка Лёша.vsd  блочка Максим.vsdx  двухсторонний.docx  записка.docx
1 курс/курсач/code/: Backgrounds.fmx  Backgrounds.pas  BallBlast.dpr  BallBlast.dproj  BallBlast.dproj.local  BallBlast.identcache  BallBlast.res  BallBlast.stat  Game.dres  Game.fmx  Game.identcache  Game.pas  Game.res  Game.stat  GameResource.rc  Main.pas  Main.vlb  Shop.fmx  Shop.pas  Skins.fmx  Skins.pas
1 курс/курсач/записка пикс/: 2.3.vsd  2.4.vsd
1 курс/лабы икг/: реферат по хистори Макс.docx
1 курс/лабы оаип/: титульник.docx
2 курс/Военка/: CП 2-1.doc  CП 2-2.doc  CП 2-4.doc  CП 3-3.doc  CП 3-4.doc  CП 3-5.doc  Tetrad.docx  Voprosy_dlya_podgotovki_k_sem_ekz.doc  Карточка.docx  Новости Беларуси и мира.ppt  Новости.pptx  СП 1-5.doc  СП 1-6.doc  СП 3-1.doc
3 курс/: Практика.docx
3 курс/1 сем/ОСиСП/Lab3/Compile/: CMakeLists.txt  main.cpp  test.cpp
3 курс/военка/: Tetrad.docx  ОСБПУ Т-3.7-- 2020.ppt
диплом/: example.js  Антиплагиат.docx  Добавить тест.txt  Доклад.docx  Отзыв Гладкий.docx  Плакат 1 Диаграмма последовательности добавления теста.vsd  Плакат 2 Диаграмма состояний практической работы.vsd  Рецензия Гладкий М.Г.doc  Система управления тестами.txt  Схема 1 Алгоритм программы.vsdx  Схема 2 Отображение формы теста.vsd  Схема 3 Отрисовка задания контурной карты.vsd  Титульник.docx  Штампы.doc  редактировать тест.txt
диплом/практика/: Отчет по практике.docx  ТЭО Гладкий.doc  ТЭО Гладкий.docx  Тезисы.docx
(+2514 files in other folders)
